--- a/index.html
+++ b/index.html
@@ -7,14 +7,78 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
+    <header class="bg-light">
+        <nav class="navbar display-flax">
             <h3 class="brand">G3 Architects</h3>
-
+            <ul class="nav-links display-flax">
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+           <div class="banner-content">
+             <h1 class="banner-title">Brand New Group of Architects</h1>
+            <p class="banner-description">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima modi molestiae numquam, inventore placeat doloribus, eaque fuga ex, dolorum deserunt neque asperiores voluptatem quas quidem aspernatur vero aliquid pariatur rerum.
+            </p>
+            <button class="btn-primary">Explore More</button>
+           </div>
+            <img class="banner-image" src="./images/banner.png" alt="">
+
+        </div>
     </header>
     <main>
+        <section class="teams display-flax">
+            <div class="team-image-container">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
 
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick List</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <p class="features-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa iste aspernatur praesentium incidunt accusamus amet cumque tempora, quibusdam voluptate asperiores repudiandae? Ducimus, aliquid. Ducimus, ipsum sit omnis molestiae dignissimos blanditiis!</p>
+
+              <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features will enjoy -->
+         <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                 <div class="fact display-flax">
+                    <div>
+                        <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winning</h5>
+                    </div>
+                 </div>
+                 <div class="fact display-flax">
+                   <div> <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5></div>
+                 </div>
+                 <div class="fact display-flax">
+                    <div><img src="./images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Client Worked</h5></div>
+                 </div>
+                 <div class="fact display-flax">
+                  <div>  <img src="./images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5></div>
+                 </div>
+            </div>
+         </section>
+         <!-- some facts -->
+          <section class="some-facts">
+
+          </section>
     </main>
     <footer>
 
