--- a/index.html
+++ b/index.html
@@ -45,7 +45,40 @@
               <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <!-- features will enjoy -->
+        <!-- features section start -->
+         <section class="features display-flax">
+            <div>
+                <h3 id="features-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint optio porro labore in eaque repudiandae. Enim esse placeat, eum, provident laborum velit corporis similique optio iusto soluta, quod quasi.</p>
+                <!-- features card container -->
+                <div class="features-card">
+                   <h4 class="features-title">Dexktop & Mobile Version</h4>
+                   <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint optio porro labore in eaque repudiandae. Enim esse placeat, eum, provident laborum velit corporis similique optio iusto soluta, quod quasi.</p>
+                </div>
+                <div class="features-card">
+                   <h4 class="features-title">Dexktop & Mobile Version</h4>
+                   <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint optio porro labore in eaque repudiandae. Enim esse placeat, eum, provident laborum velit corporis similique optio iusto soluta, quod quasi.</p>
+                </div>
+                <div class="features-card">
+                   <h4 class="features-title">Dexktop & Mobile Version</h4>
+                   <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint optio porro labore in eaque repudiandae. Enim esse placeat, eum, provident laborum velit corporis similique optio iusto soluta, quod quasi.</p>
+                </div>
+                <div class="features-card">
+                   <h4 class="features-title">Dexktop & Mobile Version</h4>
+                   <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint optio porro labore in eaque repudiandae. Enim esse placeat, eum, provident laborum velit corporis similique optio iusto soluta, quod quasi.</p>
+                </div>
+            </div>
+            <div class="features-ar">
+                <img src="./images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+         </section>
+        
+        
          <section>
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray fact-description">There are many variations of passages of lorem Ipsum available, but the majority have suffered alteration.</p>
